<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundputihpolos">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewmabda"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mabdakotak"
                android:layout_width="150dp"
                android:layout_height="300dp"
                android:src="@drawable/backgroundputihkotakmabda"/>

            <ImageView
                android:background="@drawable/lingkarluarlogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:layout_alignEnd="@+id/mabdakotak"
                android:layout_alignRight="@+id/mabdakotak"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="60dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/logomabda" />

            <TextView
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mabda_land_sharia"
                android:layout_marginEnd="45dp"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textpembuka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/detail_about"
        android:textSize="15sp"
        android:layout_marginHorizontal="@dimen/default_indicator_margin_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardviewmabda" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_indicator_margin_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/penggunaan_aplikasi"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textpembuka" />

</androidx.constraintlayout.widget.ConstraintLayout>