<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".virtualalfath">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewatas"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute">

                <RelativeLayout
                    android:background="@drawable/tombolchocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/desk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="sans-serif-condensed"
                        android:padding="@dimen/default_indicator_margin_horizontal"
                        android:text="@string/deskripsi_toolbarvratas"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/desk"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:paddingHorizontal="@dimen/default_indicator_margin_horizontal"
                        android:text="@string/deskripsi_toolbarvr" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/garisbawah"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@+id/cardviewatas" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_indicator_margin_horizontal"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="5dp"
                    android:background="@drawable/tombolcardputihcorakotak">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/softChocolate"
                        android:padding="16dp">

                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:src="@drawable/tbljalanan"
                            tools:ignore="ContentDescription"/>

                        <Button
                            android:id="@+id/btn_jalanan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/tombolgold"
                            android:gravity="center"
                            android:paddingHorizontal="@dimen/default_indicator_margin_horizontal"
                            android:text="Jalan Poros"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            tools:ignore="HardcodedText" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="5dp"
                    android:background="@drawable/tombolcardputihcorakotak">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@color/softChocolate"
                        android:padding="16dp">

                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:src="@drawable/tblaksesjalan"
                            tools:ignore="ContentDescription" />

                        <Button
                            android:id="@+id/btn_aksesjalan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/tombolgold"
                            android:gravity="center"
                            android:paddingHorizontal="@dimen/default_indicator_margin_horizontal"
                            android:text="Akses Jalan"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            tools:ignore="HardcodedText" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="5dp"
                    android:background="@drawable/tombolcardputihcorakotak">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@color/softChocolate"
                        android:padding="16dp">

                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:src="@drawable/tblhalutama"
                            tools:ignore="ContentDescription"/>

                        <Button
                            android:id="@+id/btn_jalanutama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/tombolgold"
                            android:gravity="center"
                            android:paddingHorizontal="@dimen/default_indicator_margin_horizontal"
                            android:text="Jalan Utama"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            tools:ignore="HardcodedText" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="5dp"
                    android:background="@drawable/tombolcardputihcorakotak">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@color/softChocolate"
                        android:padding="16dp">

                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            tools:ignore="ContentDescription"
                            android:src="@drawable/tblhalruko" />

                        <Button
                            android:id="@+id/btn_depanriko"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/tombolgold"
                            android:gravity="center"
                            android:paddingHorizontal="@dimen/default_indicator_margin_horizontal"
                            android:text="Depan Ruko"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            tools:ignore="HardcodedText" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="5dp"
                    android:background="@drawable/tombolcardputihcorakotak">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@color/softChocolate"
                        android:padding="16dp">

                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:src="@drawable/tblhalkantor"
                            tools:ignore="ContentDescription"/>

                        <Button
                            android:id="@+id/btn_kantor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/tombolgold"
                            android:gravity="center"
                            android:paddingHorizontal="@dimen/default_indicator_margin_horizontal"
                            android:text="kantor Pemasaran"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            tools:ignore="HardcodedText" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>






            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>